# datafusion-nyc-2025-demo

./: .gitignore  README.md  main.py  marimo_example.py  prepare_trip_data.py  pyproject.toml
